catalog/couchdb/kubernetes/public-lb/couchdb-public-lb-deployment.base.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdb-public-load-balancer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nosql
        component: nginx
        role: public-load-balancer
        release: stable      # stable, canary, alpha, beta, experimental, latest, debug
        environment: dev     # dev, staging, qa, production
        partition: all       # customer_1, customer_2, developer_1, beta_release
    spec:
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: nginx:1.10
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d
        - name: www
          mountPath: /var/www
      volumes:
        - name: nginx-conf
          configMap:
            name: couchdb-public-lb-config
            items:
            - key: default.conf
              path: default.conf
        - name: www
          configMap:
            name: couchdb-public-lb-config
            items:
            - key: index.html
              path: index.html
