catalog/couchdb/kubernetes/public-lb/couchdb-public-lb-service.aws.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-public-load-balancer
  labels:
    app: nosql
    component: load-balancer
    role: public-load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
  annotations:
    # AWS Managed cert ARN
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:000000000000:certificate/00000000-0000-0000-0000-000000000000"
    # service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
spec:
  type: LoadBalancer
  sessionAffinity: None
  selector:
    app: nosql
    component: nginx
  ports:
  - port: 80          # use   443     if you use an SSL Cert managed by AWS
    name: http        # use   https   if you use an SSL Cert managed by AWS
    protocol: TCP
    targetPort: 80
