catalog/couchdb/kubernetes/public-lb/couchdb-public-lb-service.minikube.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb-public-load-balancer
  labels:
    app: nosql
    component: load-balancer
    role: public-load-balancer
    release: stable      # stable, canary, alpha, beta, experimental, latest, debug
    environment: dev     # dev, staging, qa, production
    partition: all       # customer_1, customer_2, developer_1, beta_release
spec:
  type: NodePort
  selector:
    app: nosql
    component: nginx
  ports:
  - port: 80
    name: http
    protocol: TCP
    nodePort: 30985
